--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -238,7 +238,7 @@
                 <i class="bi bi-graph-up-arrow text-danger small"></i>
             </div>
             <p class="small text-white mb-0">
-                You're spending **UGX {{ "{:,.0f}".format(avg_burn) }}** daily. At this rate, you'll need a top-up in **{{ days_left }} days** [cite: 2026-01-01].
+                You're spending UGX {{ "{:,.0f}".format(avg_burn) }} daily. At this rate, you'll need a top-up in {{ days_left }} days.
             </p>
         </div>
 
@@ -249,7 +249,7 @@
             </div>
             {% set top_cat = category_data.items()|sort(attribute='1', reverse=true)|first %}
             <p class="small text-white mb-0">
-                **{{ top_cat[0] }}** is your highest expense this month, taking up **{{ ((top_cat[1] / total_spent) * 100)|round(1) }}%** of total outflow [cite: 2026-01-01].
+                {{ top_cat[0] }} is your highest expense this month, taking up {{ ((top_cat[1] / total_spent) * 100)|round(1) }}% of total outflow.
             </p>
         </div>
     </div>
