--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -432,7 +432,7 @@ document.querySelectorAll('#custom-legend .badge').forEach((badge, i) => {
       </div>
 
       <div class="modal-footer border-0 p-4 pt-0">
-        <button type="button" class="btn btn-danger w-100 py-3 rounded-4 fw-bold shadow-sm" data-bs-dismiss="modal" style="background-color: purple">Got it, thanks!</button>
+        <button type="button" class="btn btn-got-it py-3 rounded-4 fw-bold shadow-sm" data-bs-dismiss="modal">Got it, thanks!</button>
       </div>
     </div>
   </div>
